"working project.. bonus section still needs to be completed"

--- a/src/TechJobs/Views/Search/Index.cshtml
+++ b/src/TechJobs/Views/Search/Index.cshtml
@@ -10,8 +10,8 @@
                 <input type="radio"
                        name="searchType"
                        id="@column.Key"
-                       value="@column.Key" 
-                       checked="@column.Key == 'all''"/>
+                       value="@column.Key"
+                       checked="@column.Key == 'all''" />
                 <label for="@column.Key">@column.Value</label>
             </span>
         }
@@ -27,10 +27,24 @@
 
 <hr />
 
-@if (ViewBag.jobs != null)
+@if (ViewBag.somejobs != null)
 {
 
-    <h3>@ViewBag.jobs.Count Result(s)</h3>
+    <h3>@ViewBag.somejobs.Count Result(s)</h3>
 
-    // TODO #2 - Loop over jobs dictionary and display all job fields 
+    // TODO #2 - Loop over jobs dictionary and display all job fields
+    @foreach (Dictionary<string, string> job in ViewBag.somejobs)
+    {
+        <table class="job-listing">
+        @foreach (KeyValuePair<string, string> position in job)
+        {
+            <tr>
+                <td>@position.Key</td>
+                <td>@position.Value</td>
+            </tr>
+        }
+        </table>
+    }
+
+
 }
